<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/fNameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/fName"
        android:text="" />

    <EditText
        android:id="@+id/lNameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/lName"
        android:text="" />

    <EditText
        android:id="@+id/suEmailET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lNameET"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/Email"
        android:text="" />

    <EditText
        android:id="@+id/cPwdET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/suEmailET"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/cPassword"
        android:text="" />

    <EditText
        android:id="@+id/rPwdET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cPwdET"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/rPassword"
        android:text="" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fNameET"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/fNameET"
        android:layout_marginBottom="178dp"
        android:text="@string/Cancel" />

    <Button
        android:id="@+id/signUpButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/fNameET"
        android:layout_alignRight="@+id/fNameET"
        android:layout_alignTop="@+id/cancelButton"
        android:text="@string/SignUp" />


</RelativeLayout>